fix: @~Mapper zero parameter bug