@@ -27,7 +27,7 @@ idea {
 }
 
 val springBootVersion = "4.0.0" // !! sync springBootVersion vals
-val minorVersion: Int = 1
+val minorVersion: Int = 2
 val projectGroupId = "me.saro"
 val projectArtifactId = "spring-rest-web-client"
 val projectVersion = "$springBootVersion.$minorVersion"
@@ -67,7 +67,6 @@ kotlin {
 
 tasks.test {
     useJUnitPlatform()
-    //jvmArgs = listOf("-Dspring.profiles.active=test", "-XX:+EnableDynamicAgentLoading")
 }
 
 configure<JavaPluginExtension> {
